==> analityk/grbl_SAME70/system.c <==
#include "grbl.h"

void system_init()
{
  avr_var.CONTROL_DDR &= ~(CONTROL_MASK); // Configure as input pins
  pmc_enable_periph_clk(ID_PIOA);
  pio_configure(PIOA, PIO_INPUT, CONTROL_MASK, PIO_PULLUP);

  #ifdef DISABLE_CONTROL_PIN_PULL_UP
    //avr_var.CONTROL_PORT &= ~(CONTROL_MASK); // Normal low operation. Requires external pull-down.
	//pio_pull_down(PIOA, avr_var.CONTROL_PORT, avr_var.CONTROL_PORT);
	serial_mode_normal();
	printf("system init\r\n");
	serial_mode_grbl();
  #else
  	serial_mode_normal();
  	printf("all GPIO are pull-up'ed\r\n");
  	serial_mode_grbl();
    avr_var.CONTROL_PORT |= CONTROL_MASK;   // Enable internal pull-up resistors. Normal high operation.
	//pio_pull_up(PIOA, avr_var.CONTROL_PORT, avr_var.CONTROL_PORT);
  #endif
  //avr_var.CONTROL_PCMSK |= CONTROL_MASK;  // Enable specific pins of the Pin Change Interrupt
  cfg_interrupt_pioa(CONTROL_MASK, 15);
  // all input gpios where interrupt is generate are configure in main file

  //PCICR |= (1 << CONTROL_INT);   // Enable Pin Change Interrupt
}

uint32_t system_control_get_state()
{
  uint32_t control_state = 0;

  uint32_t pin =  pio_get(PIOA, PIO_INPUT, CONTROL_MASK); //(avr_var.CONTROL_PIN & CONTROL_MASK) ^ CONTROL_MASK;

  serial_mode_normal();
  printf("system control get state %u \r\n", pin);
  serial_mode_grbl();

  //#ifdef INVERT_CONTROL_PIN_MASK
    //pin ^= INVERT_CONTROL_PIN_MASK;
  //#endif

  if(pin){
    #ifdef ENABLE_SAFETY_DOOR_INPUT_PIN
	  if(io_bit_is_true(PIOA, CONTROL_SAFETY_DOOR_BIT)){
		  control_state |= CONTROL_PIN_INDEX_SAFETY_DOOR;
		    serial_mode_normal();
		    printf("CONTROL_PIN_INDEX_SAFETY_DOOR \r\n");
		    serial_mode_grbl();
	  }
    #else
	  if(io_bit_is_true(PIOA, CONTROL_FEED_HOLD_BIT)){
		  control_state |= CONTROL_PIN_INDEX_FEED_HOLD;
		    serial_mode_normal();
		    printf("CONTROL_PIN_INDEX_FEED_HOLD \r\n");
		    serial_mode_grbl();
	  }
    #endif
	if(io_bit_is_true(PIOA, CONTROL_RESET_BIT)){
		control_state |= CONTROL_PIN_INDEX_RESET;
		  serial_mode_normal();
		  printf("CONTROL_PIN_INDEX_RESET \r\n");
		  serial_mode_grbl();
	}
	if(io_bit_is_true(PIOA, CONTROL_CYCLE_START_BIT)){
		control_state |= CONTROL_PIN_INDEX_CYCLE_START;
		  serial_mode_normal();
		  printf("CONTROL_PIN_INDEX_CYCLE_START\r\n");
		  serial_mode_grbl();
	}
  }
  return(control_state);
}

void system_set_exec_state_flag(uint8_t mask){
	irqflags_t flags;
	flags = cpu_irq_save();
	sys_rt_exec_state |= (mask);
	__DSB();
	__ISB();
	cpu_irq_restore(flags);
}

void system_clear_exec_state_flag(uint8_t mask){
  irqflags_t flags;
  flags = cpu_irq_save();
  sys_rt_exec_state &= ~(mask);
  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}

void system_set_exec_alarm(uint8_t code){
  irqflags_t flags;
  flags = cpu_irq_save();

  sys_rt_exec_alarm = code;

  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}

void system_clear_exec_alarm(){
  irqflags_t flags;
  flags = cpu_irq_save();
  sys_rt_exec_alarm = 0;
  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}

void system_set_exec_motion_override_flag(uint8_t mask){
  irqflags_t flags;
  flags = cpu_irq_save();
  sys_rt_exec_motion_override |= (mask);
  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}

void system_set_exec_accessory_override_flag(uint8_t mask){
  irqflags_t flags;
  flags = cpu_irq_save();
  sys_rt_exec_accessory_override |= (mask);
  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}

void system_clear_exec_motion_overrides(){
  irqflags_t flags;
  flags = cpu_irq_save();
  sys_rt_exec_motion_override = 0;
  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}

void system_clear_exec_accessory_overrides(){
  irqflags_t flags;
  flags = cpu_irq_save();
  sys_rt_exec_accessory_override = 0;
  __DSB();
  __ISB();
  cpu_irq_restore(flags);
}
