==> shizacat/grbl-stm32-fork/src/system.c <==
#include "grbl.h"

void system_init()
{
  #ifdef AVRTARGET
    CONTROL_DDR &= ~(CONTROL_MASK); // Configure as input pins
    #ifdef DISABLE_CONTROL_PIN_PULL_UP
      CONTROL_PORT &= ~(CONTROL_MASK); // Normal low operation. Requires external pull-down.
    #else
      CONTROL_PORT |= CONTROL_MASK;   // Enable internal pull-up resistors. Normal high operation.
    #endif
    CONTROL_PCMSK |= CONTROL_MASK;  // Enable specific pins of the Pin Change Interrupt
    PCICR |= (1 << CONTROL_INT);   // Enable Pin Change Interrupt
  #endif
  #ifdef STM32F103C8
    GPIO_InitTypeDef GPIO_InitStructure;
    
    CONTROL_PORT_RCC();
    __HAL_RCC_AFIO_CLK_ENABLE();
    GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;    
    GPIO_InitStructure.Mode = GPIO_MODE_IT_FALLING;
    #ifdef DISABLE_CONTROL_PIN_PULL_UP
      GPIO_InitStructure.Pull = GPIO_NOPULL;
    #else
      GPIO_InitStructure.Pull = GPIO_PULLUP;
    #endif
    GPIO_InitStructure.Pin = CONTROL_MASK;
    HAL_GPIO_Init(CONTROL_PORT, &GPIO_InitStructure);

    HAL_NVIC_SetPriority(EXTI9_5_IRQn, 2, 2);
    HAL_NVIC_EnableIRQ(EXTI9_5_IRQn);
  #endif
}

uint8_t system_control_get_state()
{
  uint8_t control_state = 0;

  #ifdef AVRTARGET
    uint8_t pin = (CONTROL_PIN & CONTROL_MASK) ^ CONTROL_MASK;
    #ifdef INVERT_CONTROL_PIN_MASK
      pin ^= INVERT_CONTROL_PIN_MASK;
    #endif
  #endif
  #ifdef WIN32
    uint8_t pin = 0;
    #ifdef INVERT_CONTROL_PIN_MASK
      pin ^= INVERT_CONTROL_PIN_MASK;
    #endif
  #endif
  #ifdef STM32F103C8
    // Invert value - trigger has detected when falling edge
    uint16_t pin = ~ HAL_GPIO_Read(CONTROL_PORT);
  #endif
  if (pin) {
    #ifdef ENABLE_SAFETY_DOOR_INPUT_PIN
      if (bit_istrue(pin,(1<<CONTROL_SAFETY_DOOR_BIT))) { control_state |= CONTROL_PIN_INDEX_SAFETY_DOOR; }
    #else
      if (bit_istrue(pin,(1<<CONTROL_FEED_HOLD_BIT))) { control_state |= CONTROL_PIN_INDEX_FEED_HOLD; }
    #endif
    if (bit_istrue(pin,(1<<CONTROL_RESET_BIT))) { control_state |= CONTROL_PIN_INDEX_RESET; }
    if (bit_istrue(pin,(1<<CONTROL_CYCLE_START_BIT))) { control_state |= CONTROL_PIN_INDEX_CYCLE_START; }
  }
  return(control_state);
}

void system_set_exec_state_flag(uint8_t mask) {
#ifdef AVRTARGET
  uint8_t sreg = SREG;
  cli();
  sys_rt_exec_state |= (mask);
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_state |= (mask);
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_state |= (mask);
  __enable_irq();
#endif
}

void system_clear_exec_state_flag(uint8_t mask) {
#ifdef AVRTARGET
  uint8_t sreg = SREG;
  cli();
  sys_rt_exec_state &= ~(mask);
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_state &= ~(mask);
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_state &= ~(mask);
  __enable_irq();
#endif
}

void system_set_exec_alarm(uint8_t code) {
#ifdef AVRTARGET
  uint8_t sreg = SREG;
  cli();
  sys_rt_exec_alarm = code;
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_alarm |= (code);
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_alarm = (code);
  __enable_irq();
#endif
}

void system_clear_exec_alarm() {
#ifdef AVRTARGET
  uint8_t sreg = SREG;
  cli();
  sys_rt_exec_alarm = 0;
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_alarm = 0;
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_alarm = 0;
  __enable_irq();
#endif
}

void system_set_exec_motion_override_flag(uint8_t mask) {
#ifdef AVRTARGET
  uint8_t sreg = SREG;
  cli();
  sys_rt_exec_motion_override |= (mask);
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_motion_override |= (mask);
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_motion_override |= (mask);
  __enable_irq();
#endif
}

void system_set_exec_accessory_override_flag(uint8_t mask) {
#ifdef AVRTARGET
	uint8_t sreg = SREG;
  cli();
  sys_rt_exec_accessory_override |= (mask);
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_accessory_override |= (mask);
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_accessory_override |= (mask);
  __enable_irq();
#endif
}

void system_clear_exec_motion_overrides() {
#ifdef AVRTARGET
	uint8_t sreg = SREG;
  cli();
  sys_rt_exec_motion_override = 0;
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_motion_override = 0;
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_motion_override = 0;
  __enable_irq();
#endif
}

void system_clear_exec_accessory_overrides() {
#ifdef AVRTARGET
  uint8_t sreg = SREG;
  cli();
  sys_rt_exec_accessory_override = 0;
  SREG = sreg;
#endif
#ifdef WIN32
  EnterCriticalSection(&CriticalSection);
  sys_rt_exec_accessory_override = 0;
  LeaveCriticalSection(&CriticalSection);
#endif
#ifdef STM32F103C8
  __disable_irq();
  sys_rt_exec_accessory_override = 0;
  __enable_irq();
#endif
}
